[gd_scene load_steps=11 format=3 uid="uid://tv36e2duymgu"]

[ext_resource type="Texture2D" uid="uid://cngrkr2dglo1b" path="res://PPE_scenarios1.png" id="1_5s0wc"]
[ext_resource type="Script" uid="uid://bn020il2nukc4" path="res://scenes/simulations/ppe_simulation/ppe_scenarios.gd" id="1_vpoud"]
[ext_resource type="Texture2D" uid="uid://cxk7tl47c0sox" path="res://assets/simulations/ppe/scenarios/spilll.png" id="3_74a3e"]
[ext_resource type="Texture2D" uid="uid://bjjs2vwu40mri" path="res://assets/simulations/ppe/scenarios/crumpled_gloves.png" id="4_n27wm"]
[ext_resource type="Texture2D" uid="uid://1frd3qnm3h3d" path="res://assets/simulations/ppe/scenarios/snack pack.png" id="5_n27wm"]
[ext_resource type="Texture2D" uid="uid://2tdgvgpheik" path="res://assets/simulations/ppe/scenarios/microscope.png" id="6_1rx4b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vpoud"]
size = Vector2(30, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_74a3e"]
size = Vector2(15, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rx4b"]
size = Vector2(33, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c242u"]

[node name="ppe_scenarios" type="Node2D"]
script = ExtResource("1_vpoud")

[node name="world" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="world"]
position = Vector2(179, 89)

[node name="background" type="Sprite2D" parent="world"]
position = Vector2(330.875, 152.7)
scale = Vector2(1.125, 0.56095)
texture = ExtResource("1_5s0wc")
offset = Vector2(-135.007, -114.224)

[node name="scenario1" type="Area2D" parent="world"]

[node name="test" type="Sprite2D" parent="world/scenario1"]
position = Vector2(108.75, 156.25)
scale = Vector2(1.39063, 1.51563)
texture = ExtResource("3_74a3e")

[node name="scenario1area" type="CollisionShape2D" parent="world/scenario1"]
position = Vector2(109, 155.5)
shape = SubResource("RectangleShape2D_vpoud")

[node name="scenario2" type="Area2D" parent="world"]

[node name="test2" type="Sprite2D" parent="world/scenario2"]
position = Vector2(80, 120)
scale = Vector2(0.5, 0.375)
texture = ExtResource("4_n27wm")

[node name="scenario2area" type="CollisionShape2D" parent="world/scenario2"]
position = Vector2(80.5, 120)
shape = SubResource("RectangleShape2D_74a3e")

[node name="scenario3" type="Area2D" parent="world"]

[node name="test3" type="Sprite2D" parent="world/scenario3"]
position = Vector2(326, 142)
scale = Vector2(1.5, 0.90625)
texture = ExtResource("5_n27wm")

[node name="scenario3area" type="CollisionShape2D" parent="world/scenario3"]
position = Vector2(325.5, 141)
shape = SubResource("RectangleShape2D_1rx4b")

[node name="scenario4" type="Area2D" parent="world"]

[node name="test4" type="Sprite2D" parent="world/scenario4"]
position = Vector2(240, 134)
texture = ExtResource("6_1rx4b")

[node name="scenario4area" type="CollisionShape2D" parent="world/scenario4"]
position = Vector2(223, 119)
shape = SubResource("RectangleShape2D_c242u")
